--- a/class/01-html/02-signup.html
+++ b/class/01-html/02-signup.html
@@ -2,13 +2,22 @@
 <html lang="ko">
   <head>
     <title>회원가입</title>
+    <link href="./02-signup.css" rel="stylesheet" />
   </head>
   <body>
     <h2>회원가입</h2>
     <input type="text" placeholder="이메일을 입력해주세요" /><br /><br />
     <input type="text" placeholder="이름을 입력해주세요" /><br /><br />
-    <input type="password" placeholder="비밀번호를 입력해주세요" /><br /><br />
-    <input type="password" placeholder="비밀번호를 다시 입력해주세요" />
+    <input
+      class="pw"
+      type="password"
+      placeholder="비밀번호를 입력해주세요"
+    /><br /><br />
+    <input
+      class="pw"
+      type="password"
+      placeholder="비밀번호를 다시 입력해주세요"
+    />
     <br /><br />
 
     <select>
