css정렬 과제 내가 한 것

--- a/class/01-html/02-signup.html
+++ b/class/01-html/02-signup.html
@@ -5,34 +5,65 @@
     <link href="./02-signup.css" rel="stylesheet" />
   </head>
   <body>
-    <h2>회원가입</h2>
-    <input type="text" placeholder="이메일을 입력해주세요" /><br /><br />
-    <input type="text" placeholder="이름을 입력해주세요" /><br /><br />
-    <input
-      class="pw"
-      type="password"
-      placeholder="비밀번호를 입력해주세요"
-    /><br /><br />
-    <input
-      class="pw"
-      type="password"
-      placeholder="비밀번호를 다시 입력해주세요"
-    />
-    <br /><br />
+    <div id="background">
+      <div id="form">
+        <div class="parent">
+          <h2>
+            회원가입을 위해 <br />
+            정보를 입력해주세요
+          </h2>
+          <div class="group">
+            <div>
+              <label>*이메일</label>
+            </div>
+            <div>
+              <input type="text" />
+            </div>
+          </div>
+          <div class="group">
+            <div>
+              <label>*이름</label>
+            </div>
+            <div>
+              <input type="text" />
+            </div>
+          </div>
+          <div class="group">
+            <div>
+              <label>*비밀번호</label>
+            </div>
+            <div>
+              <input type="password" />
+            </div>
+          </div>
+          <div class="group">
+            <div>
+              <label>*비밀번호 확인</label>
+            </div>
+            <div>
+              <input type="password" />
+            </div>
+          </div>
 
-    <select>
-      <option disabled="true" selected="true">지역을 선택하세요</option>
-      <option>서울</option>
-      <option>경기</option>
-      <option>인천</option>
-    </select>
-    <br /><br />
-
-    <input type="radio" name="sex" />여성 <input type="radio" name="sex" />남성
-    <br /><br />
-
-    <input type="checkbox" /> 이용약관 개인정보 수집 및 활용에 동의합니다.
-    <hr />
-    <button>가입하기</button>
+          <!-- <select>
+        <option disabled="true" selected="true">지역을 선택하세요</option>
+        <option>서울</option>
+        <option>경기</option>
+        <option>인천</option>
+      </select>
+      <br /><br /> -->
+          <div>
+            <input type="radio" name="sex" />여성
+            <input type="radio" name="sex" />남성
+          </div>
+          <div>
+            <input type="checkbox" /> 이용약관 개인정보 수집 및 이용, 마케팅
+            활용 선택에 모두 동의합니다.
+          </div>
+          <hr />
+          <button id="submit_button">가입하기</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
