--- a/class/02-css/01-boxmodel.html
+++ b/class/02-css/01-boxmodel.html
@@ -3,6 +3,9 @@
   <head>
     <title>Document</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       div {
         width: 80px;
         height: 80px;
@@ -10,9 +13,17 @@
         padding: 10px;
       }
 
-      * {
-        box-sizing: border-box;
+      .pb {
+        width: 500px;
+        height: 500px;
+        border: 1px solid blue;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 50px;
       }
+
       /* #contentBox {
         box-sizing: content-box;
       }
@@ -23,15 +34,14 @@
     </style>
   </head>
   <body>
-    <!-- 컨텐츠 박스 -->
-    <!-- 상자 크기 자체가 더 커짐 -->
-    <div id="contentBox">박스 1</div>
-    <!-- 기본 -->
-    <!-- 상자 크기 자체가 더 커짐 -->
-    <!-- 기본적으로 컨텐츠 박스와 같은 성질을 가짐 -->
+    <!-- <div id="contentBox">박스 1</div>
     <div>박스 2</div>
-    <!-- 보더 박스 -->
-    <!-- 박스 크기는 그대로, 박스 안의 여백만 변화 -->
-    <div id="borderBox">박스 3</div>
+    <div id="borderBox">박스 3</div> -->
+
+    <div class="pb">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+    </div>
   </body>
 </html>
