--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -59,7 +59,15 @@
               </div>
             </div>
           </div>
-          <div class="innerbox__right"></div>
+          <div class="innerbox__right">
+            <div class="innerbox__right__header">
+              <div class="right__header__title">사이좋은 사람들, 싸이월드</div>
+              <div class="right__header__setting">사생활보호설정</div>
+            </div>
+            <div class="innerbox__right__body">
+              <iframe src="./home.html"></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
