--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -65,7 +65,8 @@
               <div class="right__header__setting">사생활보호설정</div>
             </div>
             <div class="innerbox__right__body">
-              <iframe src="./home.html"></iframe>
+              <iframe src="./game.html"></iframe>
+              <!-- <iframe src="./home.html"></iframe> -->
             </div>
           </div>
         </div>
