싸이월드 4일차 수정

--- a/cyworld/jukebox.html
+++ b/cyworld/jukebox.html
@@ -14,19 +14,16 @@
         <div class="divideLine"></div>
         <div class="albumWrapper">
           <div class="album">
-            <!-- <div class="image"><</div> -->
             <img src="./images/jukebox-01.png" class="cover" />
             <div class="song_title">Y(Please Tell Me Why)</div>
             <div class="artist">프리스타일</div>
           </div>
           <div class="album">
-            <!-- <div class="image"></div> -->
             <img src="./images/jukebox-02.png" class="cover" />
             <div class="song_title">눈의 꽃</div>
             <div class="artist">박효신</div>
           </div>
           <div class="album">
-            <!-- <div class="image"></div> -->
             <img src="./images/jukebox-03.png" class="cover" />
             <div class="song_title">사랑했나봐</div>
             <div class="artist">윤도현</div>
@@ -38,45 +35,44 @@
           <div class="title">추억의 BGM</div>
           <div class="subtitle">TODAY CHOICE</div>
         </div>
-        <!-- <div class="divideLine"></div> -->
-        <div class="albumTable">
-          <table>
-            <th class="ckbox"><input type="checkbox" /></th>
-            <th class="num">번호</th>
-            <th>곡명</th>
-            <th>아티스트</th>
-            <tr>
-              <td class="ckbox"><input type="checkbox" /></td>
-              <td class="num">1</td>
-              <td>눈의 꽃</td>
-              <td>박효신</td>
-            </tr>
-            <tr>
-              <td class="ckbox"><input type="checkbox" /></td>
-              <td class="num">2</td>
-              <td>사랑스러워</td>
-              <td>김종국</td>
-            </tr>
-            <tr>
-              <td class="ckbox"><input type="checkbox" /></td>
-              <td class="num">3</td>
-              <td>내사람:Partner For Life</td>
-              <td>SG 워너비</td>
-            </tr>
-            <tr>
-              <td class="ckbox"><input type="checkbox" /></td>
-              <td class="num">4</td>
-              <td>Love Love Love</td>
-              <td>에픽하이</td>
-            </tr>
-            <tr>
-              <td class="ckbox"><input type="checkbox" /></td>
-              <td class="num">5</td>
-              <td>애인...있어요</td>
-              <td>이은미</td>
-            </tr>
-          </table>
-        </div>
+        <table class="albumTable">
+          <tr>
+            <th class="albumTable__checkbox"><input type="checkbox" /></th>
+            <th class="albumTable__numer">번호</th>
+            <th class="albumTable__song">곡명</th>
+            <th class="albumTable__artist">아티스트</th>
+          </tr>
+          <tr>
+            <td class="album-table-checkbox"><input type="checkbox" /></td>
+            <td class="album-table-number">1</td>
+            <td class="album-table-song">눈의 꽃</td>
+            <td class="album-table-artist">박효신</td>
+          </tr>
+          <tr>
+            <td class="album-table-checkbox"><input type="checkbox" /></td>
+            <td class="album-table-number">2</td>
+            <td class="album-table-song">사랑스러워</td>
+            <td class="album-table-artist">김종국</td>
+          </tr>
+          <tr>
+            <td class="album-table-checkbox"><input type="checkbox" /></td>
+            <td class="album-table-number">3</td>
+            <td class="album-table-song">내사람:Partner For Life</td>
+            <td class="album-table-artist">SG 워너비</td>
+          </tr>
+          <tr>
+            <td class="album-table-checkbox"><input type="checkbox" /></td>
+            <td class="album-table-number">4</td>
+            <td class="album-table-song">Love Love Love</td>
+            <td class="album-table-artist">에픽하이</td>
+          </tr>
+          <tr>
+            <td class="album-table-checkbox"><input type="checkbox" /></td>
+            <td class="album-table-number">5</td>
+            <td class="album-table-song">애인...있어요</td>
+            <td class="album-table-artist">이은미</td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
