--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -65,9 +65,9 @@
               <div class="right__header__setting">사생활보호설정</div>
             </div>
             <div class="innerbox__right__body">
-              <!-- <iframe src="./home.html"></iframe> -->
+              <iframe src="./home.html"></iframe>
               <!-- <iframe src="./game.html"></iframe> -->
-              <iframe src="./jukebox.html"></iframe>
+              <!-- <iframe src="./jukebox.html"></iframe> -->
             </div>
           </div>
         </div>
